tests/conformance/valid/transition_data_events.svp
-- transition_data_events.svp — TransitionData con sucesos e induced_parameters

codomain K3 = { APTO, NO_APTO, INDETERMINADO };
output_semantics Klin { APTO -> "ok"; NO_APTO -> "no"; INDETERMINADO -> "u"; }

cellspec C1 { b: 3; codomain: K3; semantics: Klin; role: Base; }

horizon H1 {
  architecture: Arch1;
  events: [CambioProfilaxis, NuevoCultivo];
}

transition_data TD1 {
  horizon_ref: H1;
  events: [(CambioProfilaxis, One), (NuevoCultivo, Zero)];
  induced_parameters: [(C1, 3, One), (C1, 7, Zero)];
}
